contrast color correction

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+a:link{
+    color: #EFBFB1;
+}
 main{
       grid-column:  2/3;
       margin: 1rem;
@@ -31,7 +34,6 @@ aside {
     border: 1px solid rgb(0, 0, 0 / 0.2); 
     padding: 5px;
     margin: 1px;
-    background-color: darkgray;
     text-align: center;
     position: relative;
     grid-column:  1/2   ;
@@ -51,11 +53,11 @@ footer {
     border-top: 2px solid darkblue;
     text-align: center;
     font-size: medium;
-    color: darkcyan;
+    color: #174f60;
 }
 nav {
     display: flex;
-  background-color: #277f99;
+  background-color: #0F3E4B;
   padding: 1rem;
   justify-content: space-evenly;
     align-items: center;
@@ -79,7 +81,7 @@ header, .grid, footer {
     border: 2px solid rgba(0,0,0,0.1);
     padding: 1rem;
     margin: 1rem;
-    background-color: darkgray;
+    background-color: #0F3E4B;
     color: white;
 }
 .icon {
